        Reviewed by Justin.

Fix for
          <rdar://problem/5290113> WebKit does not correctly handle replacement ranges from the IM in -[WebHTMLView insertText:]
          http://bugs.webkit.org/show_bug.cgi?id=13664

        We replicate the logic of -[WebHTMLView setMarkedText:selectedRange:] to handle the Input Method
        feeding us a replacement string through insertText: so we can handle IMs that use insertText to
        replace text.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView insertText:]):



Canonical link: https://commits.webkit.org/18685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23926 268f45cc-cd09-0410-ab3c-d52691b4dbfc